--- a/action.yaml
+++ b/action.yaml
@@ -70,7 +70,7 @@ runs:
         echo "Threshold             : $COVERAGE_THRESHOLD %"
         totalCoverage=`go tool cover -func=coverprofile.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
         echo "Current test coverage : $totalCoverage %"
-        if (( $(echo "$totalCoverage $TESTCOVERAGE_THRESHOLD" | awk '{print ($1 >= $2)}') )); then
+        if (( $(echo "$totalCoverage $COVERAGE_THRESHOLD" | awk '{print ($1 >= $2)}') )); then
             echo "Coverage OK"
             if "$SHOULD_FAIL" -eq "true"; then
               exit 1
